--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -50,24 +50,24 @@ Theme Styles
 
 body {
   box-sizing: border-box;
-  color:#373737;
-  background: #212121;
-  font-size: 16px;
+  color:#FFFDFF;
+  background: #E471E4;
+  font-size: 20px;
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin: 10px 0;
+  margin: 15px 0;
   font-weight: 700;
-  color:#222222;
+  color:#F51919;
   font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
   letter-spacing: -1px;
 }
 
 h1 {
-  font-size: 36px;
+  font-size: 40px;
   font-weight: 700;
 }
 
@@ -98,7 +98,7 @@ p {
 }
 
 footer p {
-  color: #f2f2f2;
+  color: #A819F5;
 }
 
 a {
@@ -121,7 +121,7 @@ a {
 a:hover, a:focus {text-decoration: underline;}
 
 footer a {
-  color: #F2F2F2;
+  color: #A819F5;
   text-decoration: underline;
 }
 
@@ -287,8 +287,8 @@ Full-Width Styles
 }
 
 #header_wrap {
-  background: #212121;
-  background: -moz-linear-gradient(top, #373737, #212121);
+  background: #A819F5;
+  background: -moz-linear-gradient(top, #A819F5, #212121);
   background: -webkit-linear-gradient(top, #373737, #212121);
   background: -ms-linear-gradient(top, #373737, #212121);
   background: -o-linear-gradient(top, #373737, #212121);
@@ -355,7 +355,7 @@ Full-Width Styles
 }
 
 #main_content_wrap {
-  background: #f2f2f2;
+  background: #212121;
   border-top: 1px solid #111;
   border-bottom: 1px solid #111;
 }
